--- a/Hoof/Hoof.csproj
+++ b/Hoof/Hoof.csproj
@@ -159,6 +159,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AnnualPlanController.cs" />
     <Compile Include="Controllers\CatchController.cs" />
+    <Compile Include="Controllers\FodderPlanController.cs" />
     <Compile Include="Controllers\GameController.cs" />
     <Compile Include="Controllers\GameCountPlanController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -229,6 +230,8 @@
     <Content Include="Views\GameCountPlan\Plan.cshtml" />
     <Content Include="Views\HuntEquipmentPlan\Index.cshtml" />
     <Content Include="Views\HuntEquipmentPlan\Plan.cshtml" />
+    <Content Include="Views\FodderPlan\Index.cshtml" />
+    <Content Include="Views\FodderPlan\Plan.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
