--- a/Hoof/Hoof.csproj
+++ b/Hoof/Hoof.csproj
@@ -192,6 +192,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\CostPlan\CostPlan.js" />
     <Content Include="Scripts\EmploymentPlan\EmploymentPlan.js" />
     <Content Include="Scripts\FodderPlan\FodderPlan.js" />
     <Content Include="Scripts\HuntEquipmentPlan\HuntEquipmentPlan.js" />
