--- a/Hoof/Hoof.csproj
+++ b/Hoof/Hoof.csproj
@@ -193,6 +193,10 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="fonts\times.ttf" />
+    <Content Include="fonts\timesbd.ttf" />
+    <Content Include="fonts\timesbi.ttf" />
+    <Content Include="fonts\timesi.ttf" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\CostPlan\CostPlan.js" />
     <Content Include="Scripts\EmploymentPlan\EmploymentPlan.js" />
@@ -210,8 +214,10 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\pdfmake.min.js" />
     <Content Include="Scripts\Report\ReportPdfGenerator.js" />
     <Content Include="Scripts\TrunkFoodPlan\TrunkFoodPlan.js" />
+    <Content Include="Scripts\vfs_fonts.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
