--- a/Hoof/Hoof.csproj
+++ b/Hoof/Hoof.csproj
@@ -202,6 +202,7 @@
     <Content Include="Scripts\EmploymentPlan\EmploymentPlan.js" />
     <Content Include="Scripts\FieldPlan\FieldPlan.js" />
     <Content Include="Scripts\FodderPlan\FodderPlan.js" />
+    <Content Include="Scripts\GameCountPlan\GameCountPlan.js" />
     <Content Include="Scripts\GameHuntPlan\GameHuntPlan.js" />
     <Content Include="Scripts\HuntEquipmentPlan\HuntEquipmentPlan.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
