--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -71,12 +71,13 @@
   <ItemGroup>
     <Compile Include="Enums\CostType.cs" />
     <Compile Include="Enums\EmploymentType.cs" />
-    <Compile Include="Enums\Fodder.cs" />
+    <Compile Include="Enums\FodderType.cs" />
     <Compile Include="Enums\GameClass.cs" />
     <Compile Include="Enums\GameKind.cs" />
     <Compile Include="Enums\GameType.cs" />
     <Compile Include="Enums\HuntEquipment.cs" />
     <Compile Include="Extensions\GameExtensions.cs" />
+    <Compile Include="Extensions\TypeName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Text.Designer.cs">
       <AutoGen>True</AutoGen>
