--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -126,6 +126,10 @@
     <Compile Include="MarketingYear\IMarketingYearService.cs" />
     <Compile Include="MarketingYear\MarketingYearService.cs" />
     <Compile Include="MarketingYear\Models\MarketingYearModel.cs" />
+    <Compile Include="Pasture\IPastureService.cs" />
+    <Compile Include="Pasture\PastureService.cs" />
+    <Compile Include="Pasture\ViewModels\PastureBaseViewModel.cs" />
+    <Compile Include="Pasture\ViewModels\PastureViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report\IReportService.cs" />
     <Compile Include="Report\Models\Fodder\MonthlyReportFodderModel.cs" />
