--- a/Hoof/Hoof.csproj
+++ b/Hoof/Hoof.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Controllers\GameHuntPlanController.cs" />
     <Compile Include="Controllers\HuntEquipmentPlanController.cs" />
     <Compile Include="Controllers\LossController.cs" />
+    <Compile Include="Controllers\PastureController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\TrunkFoodPlanController.cs" />
     <Compile Include="Global.asax.cs">
@@ -217,6 +218,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\Pasture\Pasture.js" />
     <Content Include="Scripts\pdfmake.min.js" />
     <Content Include="Scripts\Report\ReportPdfGenerator.js" />
     <Content Include="Scripts\TrunkFoodPlan\TrunkFoodPlan.js" />
@@ -262,6 +264,8 @@
     <Content Include="Views\FieldPlan\Plan.cshtml" />
     <Content Include="Views\Fodder\Index.cshtml" />
     <Content Include="Views\Fodder\List.cshtml" />
+    <Content Include="Views\Pasture\Index.cshtml" />
+    <Content Include="Views\Pasture\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
