--- a/Hoof/Hoof.csproj
+++ b/Hoof/Hoof.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Controllers\HuntEquipmentPlanController.cs" />
     <Compile Include="Controllers\LossController.cs" />
     <Compile Include="Controllers\PastureController.cs" />
+    <Compile Include="Controllers\PulpitController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\TrunkFoodPlanController.cs" />
     <Compile Include="Global.asax.cs">
@@ -220,6 +221,7 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\Pasture\Pasture.js" />
     <Content Include="Scripts\pdfmake.min.js" />
+    <Content Include="Scripts\Pulpit\Pulpit.js" />
     <Content Include="Scripts\Report\ReportPdfGenerator.js" />
     <Content Include="Scripts\TrunkFoodPlan\TrunkFoodPlan.js" />
     <Content Include="Scripts\vfs_fonts.js" />
@@ -266,6 +268,8 @@
     <Content Include="Views\Fodder\List.cshtml" />
     <Content Include="Views\Pasture\Index.cshtml" />
     <Content Include="Views\Pasture\List.cshtml" />
+    <Content Include="Views\Pulpit\Index.cshtml" />
+    <Content Include="Views\Pulpit\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
