--- a/Hoof/Hoof.csproj
+++ b/Hoof/Hoof.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Controllers\AnnualPlanController.cs" />
     <Compile Include="Controllers\CatchController.cs" />
     <Compile Include="Controllers\CostPlanController.cs" />
+    <Compile Include="Controllers\DeerLickerController.cs" />
     <Compile Include="Controllers\EmploymentPlanController.cs" />
     <Compile Include="Controllers\FieldPlanController.cs" />
     <Compile Include="Controllers\FodderController.cs" />
@@ -202,6 +203,7 @@
     <Content Include="fonts\timesi.ttf" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\CostPlan\CostPlan.js" />
+    <Content Include="Scripts\DeerLicker\DeerLicker.js" />
     <Content Include="Scripts\EmploymentPlan\EmploymentPlan.js" />
     <Content Include="Scripts\FieldPlan\FieldPlan.js" />
     <Content Include="Scripts\FodderPlan\FodderPlan.js" />
@@ -270,6 +272,8 @@
     <Content Include="Views\Pasture\List.cshtml" />
     <Content Include="Views\Pulpit\Index.cshtml" />
     <Content Include="Views\Pulpit\List.cshtml" />
+    <Content Include="Views\DeerLicker\Index.cshtml" />
+    <Content Include="Views\DeerLicker\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
