--- a/Hoof/Hoof.csproj
+++ b/Hoof/Hoof.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Controllers\PulpitController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\TrunkFoodPlanController.cs" />
+    <Compile Include="Controllers\WateringPlaceController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -227,6 +228,7 @@
     <Content Include="Scripts\Report\ReportPdfGenerator.js" />
     <Content Include="Scripts\TrunkFoodPlan\TrunkFoodPlan.js" />
     <Content Include="Scripts\vfs_fonts.js" />
+    <Content Include="Scripts\WateringPlace\WateringPlace.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -274,6 +276,8 @@
     <Content Include="Views\Pulpit\List.cshtml" />
     <Content Include="Views\DeerLicker\Index.cshtml" />
     <Content Include="Views\DeerLicker\List.cshtml" />
+    <Content Include="Views\WateringPlace\Index.cshtml" />
+    <Content Include="Views\WateringPlace\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
