--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Dao\DeerLicker\IDeerLickerDao.cs" />
     <Compile Include="Dao\EmploymentPlan\EmploymentPlanDao.cs" />
     <Compile Include="Dao\EmploymentPlan\IEmploymentPlanDao.cs" />
+    <Compile Include="Dao\Expense\ExpenseDao.cs" />
+    <Compile Include="Dao\Expense\IExpenseDao.cs" />
     <Compile Include="Dao\FieldPlan\FieldPlanDao.cs" />
     <Compile Include="Dao\FieldPlan\IFieldPlanDao.cs" />
     <Compile Include="Dao\FodderPlan\FodderPlanDao.cs" />
@@ -105,6 +107,7 @@
     <Compile Include="Dto\CostPlanDto.cs" />
     <Compile Include="Dto\DeerLickerDto.cs" />
     <Compile Include="Dto\EmploymentPlanDto.cs" />
+    <Compile Include="Dto\ExpenseDto.cs" />
     <Compile Include="Dto\FieldPlanDto.cs" />
     <Compile Include="Dto\FodderDto.cs" />
     <Compile Include="Dto\FodderPlanDto.cs" />
@@ -125,6 +128,7 @@
     <Compile Include="Dto\TrunkFoodPlanDto.cs" />
     <Compile Include="Dto\WateringPlaceDto.cs" />
     <Compile Include="Entities\Catch.cs" />
+    <Compile Include="Entities\Expense.cs" />
     <Compile Include="Entities\CostPlan.cs" />
     <Compile Include="Entities\DeerLicker.cs" />
     <Compile Include="Entities\EmploymentPlan.cs" />
