--- a/Hoof/Hoof.csproj
+++ b/Hoof/Hoof.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Controllers\CostPlanController.cs" />
     <Compile Include="Controllers\DeerLickerController.cs" />
     <Compile Include="Controllers\EmploymentPlanController.cs" />
+    <Compile Include="Controllers\ExpenseController.cs" />
     <Compile Include="Controllers\FieldPlanController.cs" />
     <Compile Include="Controllers\FodderController.cs" />
     <Compile Include="Controllers\FodderPlanController.cs" />
@@ -206,6 +207,7 @@
     <Content Include="Scripts\CostPlan\CostPlan.js" />
     <Content Include="Scripts\DeerLicker\DeerLicker.js" />
     <Content Include="Scripts\EmploymentPlan\EmploymentPlan.js" />
+    <Content Include="Scripts\Expense\Expense.js" />
     <Content Include="Scripts\FieldPlan\FieldPlan.js" />
     <Content Include="Scripts\FodderPlan\FodderPlan.js" />
     <Content Include="Scripts\Fodder\Fodder.js" />
@@ -278,6 +280,8 @@
     <Content Include="Views\DeerLicker\List.cshtml" />
     <Content Include="Views\WateringPlace\Index.cshtml" />
     <Content Include="Views\WateringPlace\List.cshtml" />
+    <Content Include="Views\Expense\Index.cshtml" />
+    <Content Include="Views\Expense\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
